<resources>
    <string name="app_name">Razas y Pelajes</string>

    <string name="recognition_mode">Modo Reconocimiento:</string>
    <string name="listRadioButton">Lista</string>
    <string name="gridRadioButton">Grilla</string>
    <string name="razasCheckbox">Razas</string>
    <string name="pelajesCheckbox">Pelajes</string>
    <string name="reconocimiento">Reconocimiento</string>
    <string name="jugar">Jugar</string>

    <string name="miniGame">Minijuego:</string>
    <string name="razasYPelajesIPRadioButton">Razas y Pelajes: Imagen-Palabra</string>
    <string name="razasYPelajesPIRadioButton">Razas y Pelajes: Palabra-Imagen</string>

    <string name="difficulty_level">Nivel de dificultad:</string>
    <string name="difficulty_level_easy">Fácil</string>
    <string name="difficulty_level_hard">Difícil</string>
    <string name="audio">Audio:</string>
    <string name="masculine">Masculina</string>
    <string name="femenine">Femenina</string>

    <string name="config_preferences">config_preferences</string>
    <string name="config_preferences_level">config_preferences_level</string>
    <string name="config_preferences_sex">config_preferences_sex</string>
    <string name="config_preferences_mini_juego">config_preferences_mini_juego</string>
    <string name="config_preferences_recognition_mode">config_preferences_recognition_mode</string>
    <string name="config_preferences_game_mode">config_preferences_game_mode</string>

    <string name="accept">Aceptar</string>

    <string name="interaction_b_horse1">interaction_b_horse1</string>
    <string name="interaction_b_horse2">interaction_b_horse2</string>
    <string name="interaction_b_horse3">interaction_b_horse3</string>
    <string name="interaction_b_horse4">interaction_b_horse4</string>

    <string name="success_sound">success_sound</string>
    <string name="error_sound">error_sound</string>

    <string name="raza_para_adivinar">Raza para adivinar</string>

    <string name="horse">Horse</string>
    <string name="photoHorse1">horse1</string>
    <string name="photoHorse2">horse2</string>
    <string name="photoHorse3">horse3</string>
    <string name="photoHorse4">horse4</string>

    <string name="volver">Volver</string>
    <string name="textview">TextView</string>


    <string name="autor">Juego desarrollado por Franco Emanuel Liptak, para la cátedra Laboratorio de Software.</string>
    <string name="objective">El objetivo general de este juego es favorecer el reconocimiento e identificación  de las razas y pelajes del caballo que se utiliza en la sesión o clase de CEDICA.</string>
    <string name="title">Es un juego de un único jugador y cuenta con 2 modos: Reconocimiento y Juego.</string>
    <string name="recognitionModeExplication">- Modo Reconocimiento: el objetivo de este modo es que las amazonas y jinetes puedan distinguir su caballo y el de sus compañeras y compañeros. Se trata de una instancia de reconocimiento de razas, pelajes.</string>
    <string name="gameExplication">
        - Modo Juego: Consiste de 2 minijuegos. En cada minijuego se usa una secuencia de 5 desafíos. Dentro de cada desafío la dificultad estará dada por la cantidad de opciones disponibles (2 imágenes/audios o 4 imágenes/audios).
        Los minijuegos son de dificultad incremental y dependientes. Para pasar al minijuego 2, el o la jugadora debe acertar 3 de 5 desafíos del minijuego 1.
    </string>

</resources>
